// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-expandable-layout default 1`] = `
<div
  class="m-expandable-layout m--has-left-panel"
>
  <div
    class="m-expandable-layout__main"
  >
    <div
      style="background: lightgrey; height: 200vh;"
    >
      <p
        class="m-u--h3 m-u--no-margin"
      >
        Main content
      </p>
      Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book. It usually begins with:
      <br />
      
            “Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”
            The purpose of lorem ipsum is to create a natural looking block of text (sentence, paragraph, page, etc.) that doesn't distract from the layout. A practice not without controversy, laying out pages with meaningless filler text can be very useful when the focus is meant to be on design, not content.
      <br />
      <br />
      
            The passage experienced a surge in popularity during the 1960s when Letraset used it on their dry-transfer sheets, and again during the 90s as desktop publishers bundled the text with their software. Today it's seen all around the web; on templates, websites, and stock designs. Use our generator to get your own, or read on for the authoritative history of lorem ipsum.
    </div>
     
  </div>
   
  <div
    class="m-expandable-layout__panel"
    style="width: 320px;"
  >
    <div
      class="m-expandable-layout__panel-content"
      style="width: 320px;"
    >
      <div
        style="background: yellow; height: 300vh;"
      >
        <p
          class="m-u--h3 m-u--no-margin"
        >
          Panel content
        </p>
        HISTORY
        <br />
        PURPOSE
        <br />
        USAGE
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-expandable-layout open 1`] = `
<div
  class="m-expandable-layout m--has-left-panel"
  style="background: yellow;"
>
  <div
    class="m-expandable-layout__main"
  >
    <div
      style="background: lightgrey;"
    >
      main content
    </div>
     
  </div>
   
  <div
    class="m-expandable-layout__panel"
    style="width: 320px;"
  >
    <div
      class="m-expandable-layout__panel-content"
      style="width: 320px;"
    >
      panel content
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-expandable-layout panel-position="right" 1`] = `
<div
  class="m-expandable-layout m--has-right-panel"
  style="background: yellow;"
>
  <div
    class="m-expandable-layout__main"
  >
    <div
      style="background: lightgrey;"
    >
      main content
    </div>
     
  </div>
   
  <div
    class="m-expandable-layout__panel"
    style="width: 320px;"
  >
    <div
      class="m-expandable-layout__panel-content"
      style="width: 320px;"
    >
      panel content
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-expandable-layout panel-width="600px" 1`] = `
<div
  class="m-expandable-layout m--has-left-panel"
  style="background: yellow;"
>
  <div
    class="m-expandable-layout__main"
  >
    <div
      style="background: lightgrey;"
    >
      main content
    </div>
     
  </div>
   
  <div
    class="m-expandable-layout__panel"
    style="width: 600px;"
  >
    <div
      class="m-expandable-layout__panel-content"
      style="width: 600px;"
    >
      panel content
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-expandable-layout without panel slot 1`] = `
<div
  class="m-expandable-layout"
  style="background: yellow;"
>
  <div
    class="m-expandable-layout__main"
  >
    <div
      style="background: lightgrey;"
    >
      main content
    </div>
  </div>
   
  <div
    class="m-expandable-layout__panel"
  >
    <div
      class="m-expandable-layout__panel-content"
    />
  </div>
</div>
`;
